# or-it

./: .eslintrc.js  .gitignore  .prettierrc  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.webpack.json  vite.config.ts
backend/: .gitignore  Cargo.toml
backend/src/: main.rs
backend/src/config/: mongo.rs
backend/src/handler/: graphql_handler.rs
backend/src/schemas/: project_schema.rs
electron/main/: update.ts
frontend/: .eslintrc.js  index.html  package.json  tsconfig.json  vite.common.config.ts  vite.dev.config.ts  vite.prod.config.ts
frontend/src/: App.tsx  global.d.ts  index.scss  main.tsx
frontend/src/components/ColumnsContainer/: index.tsx
frontend/src/components/Register/: index.tsx
frontend/src/scenes/DashBoard/: index.tsx
frontend/src/scenes/Home/: index.tsx
frontend/src/utils/: ctx.ts  environment.ts
src/: App.tsx  firebase.tsx  index.scss  main.tsx
src/components/Alert/NavBar/: index.tsx
src/components/ColumnsContainer/: index.tsx
src/components/DivContainer/: index.tsx
src/components/Finances/: index.tsx
src/components/Login/: index.tsx
src/components/LoginForm/: index.tsx
src/components/MainLogo/: index.tsx
src/components/NavBar/: index.tsx
src/components/Register/: index.tsx
src/context/: authContext.tsx
src/scenes/DashBoard/: index.tsx
src/scenes/Home/: index.tsx
src/utils/: apollo.ts
