[package]
name = "or-it-api"
version = "0.1.0"
edition = "2021"
authors = ["Zahori Pereira <aproblemasolution@gmail.com>","John Perez <mrjohnjairo10@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "5.0.9", features = ["bson", "chrono"] }
async-graphql-rocket = "5.0.9"
dotenv = "0.15.0"
futures = "0.3.28"
juniper = { version = "0.15.11", default-features = false }
juniper_rocket = "0.8.2"
mongodb = { version = "2.5.0", default-features = false, features = ["sync"] }
rocket = { version = "=0.5.0-rc.2", default-features = false, features = [
    "json",
] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

[dev-dependencies]
juniper = { version = "0.15.11", features = ["expose-test-schema"] }
